opaque background on social media links in desktop mode to avoid overlapping

--- a/app/styles/_site-chrome.scss
+++ b/app/styles/_site-chrome.scss
@@ -439,6 +439,9 @@ the DOM */
   @include l-bottom;
 }
 
+.nypr-social-icons { 
+  background: #00aeff;
+}
 
 .sitechrome__nav-footer {
   position: fixed;
